# overdrive-library

./: README.md  notes_for_how_this_works.md  pyproject.toml  requirements.txt
custom_user/: admin.py  forms.py  helpers.py  models.py  views.py
custom_user/migrations/: 0001_initial.py  0002_auto_20200707_0005.py  0002_auto_20200713_1546.py  0003_auto_20200713_1547.py  0004_auto_20200713_1557.py  0005_auto_20200713_2237.py
custom_user/static/css/: overdrive_library.css
digital_books/: admin.py  forms.py  helpers.py  models.py  urls.py  views.py
digital_books/management/commands/: populate_books.py
digital_books/migrations/: 0001_initial.py  0002_auto_20200709_0213.py
library_project/: .env.example  settings.py  urls.py
static/css/: overdrive_library.css
staticdeploy/css/: overdrive_library.css
templates/: 404.html  500.html  base.html  index.html  menubar.html
templates/custom_user/: generic_form.html  index.html  login_form.html  profile.html  profile_books.html
templates/digital_books/: book_delete.html  book_detail.html  book_form.html  index.html  search.html
